# lambda-calculus

./: .gitignore  237.bootstrap.js  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  about.html  bootstrap.js  deploy.sh  exercises.html  grammar.ebnf  grammar.txt  grammar_types.txt  index.css  index.html  run.sh
.git-hooks/: pre-commit
examples/: and.lam  or.lam  plus.lam  succ.lam
exercises/: bool-and.answer.txt  bool-if.answer.txt  bool-not.answer.txt  bool-not.description.html  bool-or.answer.txt  bool.description.html  church-plus.answer.txt  church-plus.description.html  church-succ.answer.txt  church.description.html  tuple-fst-snd.description.html  tuple.description.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_valid.rs  parse_without_panic.rs
src/: debruijn.rs  emit.rs  error.rs  eval.rs  interpret_as.rs  lex.rs  lib.rs  main.rs  parse.rs
tests/: cli.rs  wasm.rs
www/: about.html  exercises.html  index.css  index.html  index.js  package-lock.json  package.json  webpack.config.js
www/exercises/: and.answer.txt  and.description.html  bool-and.answer.txt  bool-if.answer.txt  bool-if.description.html  bool-not.answer.txt  bool-or.answer.txt  bool-or.description.html  church-plus.answer.txt  church-succ.answer.txt  church-succ.description.html  if.description.html  not.answer.txt  or.answer.txt  or.description.html  tuple-fst-snd.answer.txt  tuple.description.html
