[package]
name = "lambda"
version = "0.1.0"
description = "A simple interpreter for the untyped lambda calculus."
repository = "https://github.com/louis-hildebrand/lambda-calculus"
authors = ["Louis Hildebrand <louis.hildebrand@mail.mcgill.ca>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.5.4", features = ["derive"] }
wasm-bindgen = "0.2.84"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
